--- a/etc/resolved.conf
+++ b/etc/resolved.conf
@@ -1,8 +1,6 @@
 [Resolve]
-DNS=1.1.1.1#cloudflare-dns.com
-DNS=1.0.0.1#cloudflare-dns.com 
-DNS=2606:4700:4700::1111#cloudflare-dns.com
-DNS=2606:4700:4700::1001#cloudflare-dns.com
+DNS=2a07:e340::4#base.dns.mullvad.net
+DNS=194.242.2.4#base.dns.mullvad.net
 
 DNSSEC=yes
 DNSOverTLS=yes
